Add theme 'Essay'

--- a/viewer.html
+++ b/viewer.html
@@ -92,6 +92,7 @@
 								<select id="theme">
 									<option value="country">Country</option>
 									<option value="deepocean">Deep Ocean</option>
+									<option value="essay">Essay</option>
 									<option value="galactic">Galactic</option>
 									<option value="google">Google</option>
 									<option value="stoneage">Stone Age</option>
