--- a/viewer.html
+++ b/viewer.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="js/jquery.blockUI.js"></script>
 	<script src="js/jquery.growl.js" type="text/javascript"></script>
 	<link href="css/jquery.growl.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="js/mustache.min.js"></script>
 	<script type="text/javascript" src="js/showdown.min.js"></script>
 	<script type="text/javascript" src="js/markdown-display.js"></script>
 	<!--link rel="stylesheet" href="css/markdown.css"></script-->
