--- a/viewer.html
+++ b/viewer.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="js/mdu.js"></script>
 
 
+
 	<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery.blockUI.js"></script>
 	<script src="js/jquery.growl.js" type="text/javascript"></script>
@@ -42,9 +43,28 @@
 	//<![CDATA[
 
 		var useHistory = window.onpopstate && window.history.pushState;
+
+		var themeConfigurator = new Theme.Configurator({
+			themes : [
+				new Theme.Reference('country','Country'),
+				new Theme.Reference('deepocean','Deep Ocean'),
+				new Theme.Reference('essay','Essay'),
+				new Theme.Reference('galactic','Galactic'),
+				new Theme.Reference('google','Google'),
+				new Theme.Reference('stoneage','Stone Age'),
+				new Theme.Reference('subtle','Subtle'),
+				new Theme.Reference('terminal','Terminal')
+			]
+		});
 		
 		jQuery(function() {    
 			var markdownBuilder = null;
+
+			try {
+				themeConfigurator.setup();
+			} catch (ex) {
+				jQuery.growl.warning({title: "Cannot set theme", message: ex})
+			}
 	
 			if (useHistory) {
 				window.onpopstate = function(event) {
@@ -163,16 +183,7 @@
 								<table>
 									<tr>
 										<td colspan="2">
-											<select id="theme">
-												<option value="country">Country</option>
-												<option value="deepocean">Deep Ocean</option>
-												<option value="essay">Essay</option>
-												<option value="galactic">Galactic</option>
-												<option value="google">Google</option>
-												<option value="stoneage">Stone Age</option>
-												<option value="subtle">Subtle</option>
-												<option value="terminal">Terminal</option>
-											</select>
+											<select id="theme" />
 										</td>
 									</tr>
 									<tr>
