--- a/viewer.html
+++ b/viewer.html
@@ -20,7 +20,15 @@
 	<script src="js/jquery.growl.js" type="text/javascript"></script>
 	<link href="css/jquery.growl.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="js/mustache.min.js"></script>
-	<script type="text/javascript" src="js/showdown.min.js"></script>
+	<!--script type="text/javascript" src="js/showdown.min.js"></script-->
+
+	<script type="text/javascript" src="js/Markdown.Converter.js"></script>
+	<script type="text/javascript" src="js/Markdown.Sanitizer.js"></script>
+	<script type="text/javascript" src="js/Markdown.Editor.js"></script>
+	<script type="text/javascript" src="prettify.js"></script>
+	<script type="text/javascript" src="js/Markdown.Extra.js"></script>
+ 
+
 	<script type="text/javascript" src="js/markdown-display.js"></script>
 	<!--link rel="stylesheet" href="css/markdown.css"></script-->
 
