viewer : add flow et sequence chart conversion

--- a/viewer.html
+++ b/viewer.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	
-	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+	<!--script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script-->
 	<link rel="stylesheet" href="https://cdn.rawgit.com/martin-work/web-util/master/static/css/common.css" />
 	<script type="text/javascript" src="https://cdn.rawgit.com/martin-work/web-util/master/static/js/misc.js"></script>
 	<link rel="stylesheet" href="css/viewer.css" />
@@ -25,8 +25,13 @@
 	<script type="text/javascript" src="js/Markdown.Converter.js"></script>
 	<script type="text/javascript" src="js/Markdown.Sanitizer.js"></script>
 	<script type="text/javascript" src="js/Markdown.Editor.js"></script>
-	<script type="text/javascript" src="prettify.js"></script>
+	<!--script type="text/javascript" src="js/prettify.js"></script-->
 	<script type="text/javascript" src="js/Markdown.Extra.js"></script>
+
+	<script src="js/raphael-min.js"></script>
+	<script src="js/underscore-min.js"></script>
+	<script src="js/sequence-diagram-min.js"></script>
+	<script src="js/flowchart-latest.js"></script>
  
 
 	<script type="text/javascript" src="js/markdown-display.js"></script>
