--- a/viewer.html
+++ b/viewer.html
@@ -52,6 +52,12 @@
 	<script  type="text/javascript">
 	//<![CDATA[
 
+		jQuery( document ).ajaxError(function( event, jqxhr, settings, thrownError ) {
+			if ( settings.url == "ajax/missing.html" ) {
+				jQuery( "div.log" ).text( "Triggered ajaxError handler." );
+			}
+		});
+	
 		var useHistory = window.onpopstate && window.history.pushState;
 
 		var themeConfigurator = new Theme.Configurator({
@@ -60,6 +66,7 @@
 					jQuery.growl.warning({title: "Cannot set theme", message: error});
 				}
 			},
+			default_theme : 'pdofsi',
 			themes : [
 				new Theme.Reference('country','Country'),
 				new Theme.Reference('deepocean','Deep Ocean'),
@@ -77,7 +84,32 @@
 				]
 			}
 		});	
-		
+
+		function moveScroller() {
+			var $anchor = $("body");
+			var $scroller = $('#tools');
+
+			var move = function() {
+				var st = $(window).scrollTop();
+				var ot = $anchor.offset().top;
+				if(st > ot) {
+					$scroller.css({
+						position: "fixed",
+						top: "1em", right : "1em"
+					});
+				} else {
+					if(st <= ot) {
+						$scroller.css({
+							position: "relative",
+							top: "", right : "1em"
+						});
+					}
+				}
+			};
+			$(window).scroll(move);
+			move();
+		}
+
 		jQuery(function() {    
 			var markdownBuilder = null;
 
@@ -86,6 +118,7 @@
 			} catch (ex) {
 				jQuery.growl.warning({title: "Cannot set theme", message: ex});
 			}
+			moveScroller();
 	
 			var content_selector = "div.container>div.content";
 			var title_selector = "span.title";
@@ -127,10 +160,10 @@
 						content_selector : content_selector
 					},
 					nameToURLConverters : [
-						   MarkdownDisplay.config.NameToURLConverters.GITHUB,
-						   new MarkdownDisplay.NameToURLConverter ( /^generali\/~([^\/]+)\/([^\/]+)\/(.+)$/ , 'http://git.groupe.generali.fr/users/{0}/repos/{1}/browse/{2}?at=master&raw'),
-						   new MarkdownDisplay.NameToURLConverter ( /^generali\/([^\/]+)\/(.+)$/ , 'http://git.groupe.generali.fr/users/b010cdx/repos/{0}/browse/{1}?at=master&raw'),
-						   new MarkdownDisplay.NameToURLConverter ( /^livrable\/(.+)$/ , 'http://git.groupe.generali.fr/users/b010cdx/repos/document/browse/{0}?at=master&raw' )
+						MarkdownDisplay.config.NameToURLConverters.GITHUB,
+						new MarkdownDisplay.NameToURLConverter ( /^generali\/~([^\/]+)\/([^\/]+)\/(.+)$/ , 'http://git.groupe.generali.fr/users/{0}/repos/{1}/browse/{2}?at=master&raw'),
+						new MarkdownDisplay.NameToURLConverter ( /^generali\/([^\/]+)\/(.+)$/ , 'http://git.groupe.generali.fr/users/b010cdx/repos/{0}/browse/{1}?at=master&raw'),
+						new MarkdownDisplay.NameToURLConverter ( /^livrable\/(.+)$/ , 'http://git.groupe.generali.fr/users/b010cdx/repos/document/browse/{0}?at=master&raw' )
 					],
 				},
 				pre_process : {
@@ -165,7 +198,7 @@
 					<td>
 						<header class="main-container" style="text-align: center">
 
-							<div id="tools" class="reverse-boo" style="float : right;">
+							<div id="tools" class="reverse-boo" style="position:absolute; top:1em; right:1em;">
 								<table>
 									<tr>
 										<td colspan="2">
