--- a/viewer.html
+++ b/viewer.html
@@ -20,6 +20,7 @@
 	<script src="js/jquery.growl.js" type="text/javascript"></script>
 	<link href="css/jquery.growl.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="js/mustache.min.js"></script>
+	<script type="text/javascript" src="js/jquery.injectCSS.js"></script>
 	<!--script type="text/javascript" src="js/showdown.min.js"></script-->
 
 	<script type="text/javascript" src="js/Markdown.Converter.js"></script>
@@ -44,7 +45,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
 
-	<script type="text/javascript" src="config.js">
+	<script type="text/javascript" src="config.js"></script>
 
 </head>
 <body>
