--- a/viewer.html
+++ b/viewer.html
@@ -20,7 +20,7 @@
 	<script src="js/jquery.growl.js" type="text/javascript"></script>
 	<link href="css/jquery.growl.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="js/mustache.min.js"></script>
-	<script type="text/javascript" src="js/jquery.injectCSS.js"></script>
+	<script type="text/javascript" src="js/jss.js"></script>
 	<!--script type="text/javascript" src="js/showdown.min.js"></script-->
 
 	<script type="text/javascript" src="js/Markdown.Converter.js"></script>
