--- a/viewer.html
+++ b/viewer.html
@@ -212,6 +212,8 @@
 						jQuery(all_selector).css('visibility','visible').animate({opacity:1},1000);
 						jQuery(title_selector).tooltipster({
 							interactive : true,
+							delay : [ 0, 350 ],
+							//animation : 'swing',
 							functionInit : function(instance, helper){
 								var infoTable = jQuery("<table>");
 								if (data.source.url)
