--- a/viewer.html
+++ b/viewer.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="js/js.cookie.js"></script>
 	<script type="text/javascript" src="js/mdu.js"></script>
 
+	<link rel="icon" type="image/png" href="image/page/viewer.png" />
 
 
 	<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
