Theme : make default background fullheight

--- a/viewer.html
+++ b/viewer.html
@@ -54,6 +54,18 @@
 </head>
 <body>
 
+	<style>
+		body, html {
+			height:100%
+		}
+		body {
+			margin: 0px;
+		}
+		.viewer.body {
+			min-height:100%;
+		}
+	</style>
+
 	<script id="markdown-display_on-the-fly-loader" ></script>
 	
 	<script  type="text/javascript">
@@ -239,7 +251,7 @@
 	//]]>
 	</script>
 
-	<div id="exported-content" style="text-align: center">
+	<div id="exported-content" class="viewer body" style="text-align: center">
 		<div style="display: inline-block; text-align: initial;">
 			<table>
 				<tr>
