viewer : move tools on the left

--- a/viewer.html
+++ b/viewer.html
@@ -121,12 +121,12 @@
 				if (st > ot) {
 					$scroller.css({
 						position: "fixed",
-						top: "1em", right : "1em"
+						top: "1em", left : "1em"
 					});
 				} else {
 					$scroller.css({
 						position: "absolute",
-						top: "", right : "1em"
+						top: "", left : "1em"
 					});
 				}
 			};
