viewer : always show title tooltip at the bottom

--- a/viewer.html
+++ b/viewer.html
@@ -213,6 +213,7 @@
 						jQuery(all_selector).css('visibility','visible').animate({opacity:1},1000);
 						jQuery(title_selector).tooltipster({
 							interactive : true,
+							side : 'bottom',
 							delay : [ 0, 350 ],
 							//animation : 'swing',
 							functionInit : function(instance, helper){
